# Aravali_Mountains_Landloss

./: .gitignore  Background_info.txt  LICENSE  README.md  debug_osm_query.py  environment.yml  pyproject.toml  requirements.txt
data/: districts.yml
data/boundaries/: Beawar_merged.geojson
docs/: WINDOWS_SRTM_GUIDE.md  district_cards.md
outputs/: all_districts_summary.csv
scripts/: aggregate_results.py  batch_process_districts.py  demo.py  fetch_districts.py  generate_aggregated_map.py  generate_district_cards.py  generate_map_variations.py  prepare_beawar_boundary.py  prepare_bharatpur_boundary.py
src/aravalli/: __init__.py  __main__.py  boundaries.py  cli.py  core.py  dem.py  dem_providers.py  elevation.py  new_method.py  old_method.py  srtm_download.py  stats.py  visualization.py
